update the about section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <span class="border one"></span>
         </div>
             <p class="long-copy">
+                <img class="photo-about" src="resources/images/stev1.jpg" alt="profile picture">
                 I'm a very passionate, motivated and enthusiastic individual looking to make a change both personally
                 and for those I work with. As a web developer focused on customer satisfaction, I manage all aspects of
                 development from concept to design, launch, maintenance and user support.
