--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
         <!-- banner contact -->
         <div class="banner-content">
             <h1>Hello World!</h1>
-            <h6>I'm Stephen. Writing your story in a code</h6>
-            <ul> 
-                <li><a href=""><i class="ion-logo-googleplus"></i></a></li>
-                <li><a href="https://github.com/Stephenice" target="_blank"><i class="ion-logo-github"></i></a></li>
-                <li><a href=""><i class="ion-logo-linkedin"></i></a></li>
+            <h6>I'm Stephen. I am a Front-End Web Developer who<br> enjoys creating awesome web applications and<br> even magical user experience.</h6>
+            <ul class="icon"> 
+                <!-- <ion-icon name="logo-twitter"></ion-icon> -->
+        <li><a href="https://twitter.com/IjehStephen"  target="_blank"><i class="ion-logo-twitter"></i></a></li>
+        <li><a href="https://github.com/Stephenice" target="_blank"><i class="ion-logo-github"></i></a></li>
+        <li><a href="#" target="_blank"><i class="ion-logo-linkedin"></i></a></li>
                
             </ul>
         </div>
@@ -290,7 +291,7 @@
 
         <footer>
                <div class="row center">
-                <ul> 
+                <ul class="icon"> 
                         <li><a href="">
                             <i class="ion-logo-googleplus"></i></a>
                         </li>
