Updated about section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ Hire me to help you build a web application with a magical user experience. Take
         </div>
         <div class="col span-1-of-4 box js--wp-2">
                 <i class="ion-ios-speedometer icon-big"></i> 
+                <!-- Team Player -->
             <h3 class="h3-about">Fast</h3>
             <p>Prioritizing a list of tasks and concentrating on higher value tasks with more immediate response needed.</p>
 </div>
@@ -104,7 +105,7 @@ Hire me to help you build a web application with a magical user experience. Take
             </div>
             <div class="col span-1-of-4 box js--wp-4">
                     <i class="ion-md-flashlight icon-big js--wp-5"></i>
-            <h3 class="h3-about">Dynamic</h3>
+            <h3 class="h3-about">Passion</h3>
             <p>I love creating a web application that makes life easier and more convenient, saves time, energy and reduces human labor.</p>
             </div>
         </div>
