--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@ Hire me to help you build a web application with a magical user experience. Take
         </div>
         <div class="col span-1-of-4 box js--wp-2">
                 <i class="ion-ios-speedometer icon-big"></i> 
-                <!-- Team Player -->
+                
             <h3 class="h3-about">Fast</h3>
             <p>Prioritizing a list of tasks and concentrating on higher value tasks with more immediate response needed.</p>
 </div>
             <div class="col span-1-of-4 box js--wp-3">
                     <i class="ion-ios-laptop icon-big"></i>
+                     <!-- Team Player -->
+                    
             <h3 class="h3-about">Responsive</h3>
             <p>Creating products that respond to the user’s behavior and environment based on their devices (on screen size, platform, and orientation).</p>
             </div>
@@ -174,10 +176,10 @@ Hire me to help you build a web application with a magical user experience. Take
 
             <div class="col span-1-of-4 box">
                 <img src="resources/images/berlin.jpg" alt="">
-                <h3>Up & Going Coding Roading</h3>
+                <h3>Solve 3x3 Rubik's Cube Easy</h3>
                 <div class="blog-feature date">
                 <i class="ion-ios-calendar small"></i>
-                <span class="psmall">March 13, 2019</span>
+                <span class="psmall">March 13, 2021</span>
                 </div>
                 <div class="blog-feature">
                 <p>At one time or another, as a developer, we've all found ourselves hopelessly stuck on a coding <a href="" >Read more</a></p>
