--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
         <!-- banner contact -->
         <div class="banner-content">
-            <h1>Hello World!</h1>
-            <h6>I'm Stephen. I am a Front-End Web Developer who<br> enjoys creating awesome web applications and<br> even magical user experience.</h6>
+            <h1>I'm Stephen Ijeh</h1>
+            <h6>A Front-End Web Developer who<br> enjoys creating awesome web applications and<br> even magical user experience.</h6>
             <ul class="icon"> 
                 <!-- <ion-icon name="logo-twitter"></ion-icon> -->
         <li><a href="https://twitter.com/IjehStephen"  target="_blank"><i class="ion-logo-twitter"></i></a></li>
@@ -182,19 +182,19 @@ Hire me to help you build a web application with a magical user experience. Take
                 <span class="psmall">March 13, 2021</span>
                 </div>
                 <div class="blog-feature">
-                <p>At one time or another, as a developer, we've all found ourselves hopelessly stuck on a coding <a href="" >Read more</a></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae voluptatum expedita, architecto numquam ipsa corrupti deserunt, quasi magni nihil minima ut asperiores hic. <a href="" >Read more</a></p>
                 </div>
             </div>
 
             <div class="col span-1-of-4 box">
                     <img src="resources/images/berlin.jpg" alt="">
-                    <h3>Breaking Your Coder's Block</h3>
+                    <h3>Common JS Mistakes for Beginner</h3>
                     <div class="blog-feature date">
                     <i class="ion-ios-calendar small"></i>
                     <span class="psmall">April 29, 2016</span>
                     </div>
                     <div class="blog-feature">
-                    <p>At one time or another, as a developer, we've all found ourselves hopelessly stuck on a coding <a href="" >Read more</a></p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius ab, perspiciatis maxime nesciunt maiores repudiandae corporis animi enim saepe at aperiam quaerat eveniet, <a href="" >Read more</a></p>
                     </div>
                 </div>
 
@@ -206,7 +206,7 @@ Hire me to help you build a web application with a magical user experience. Take
                         <span class="psmall">April 29, 2016</span>
                         </div>
                         <div class="blog-feature">
-                        <p>At one time or another, as a developer, we've all found ourselves hopelessly stuck on a coding <a href="" >Read more</a></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatum ullam odit fuga incidunt, voluptatem sunt nam sit ipsam cumque delectus, fugiat iure culpa dicta nihil. Maxime minus exercitationem labore. <a href="" >Read more</a></p>
                         </div>
                     </div>
 
@@ -218,7 +218,7 @@ Hire me to help you build a web application with a magical user experience. Take
                             <span class="psmall">April 29, 2016</span>
                             </div>
                             <div class="blog-feature">
-                            <p>At one time or another, as a developer, we've all found ourselves hopelessly stuck on a coding - <a href="" >Read more</a></p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid quaerat eaque harum veritatis tenetur officiis earum veniam vero, beatae,i.bus - <a href="" >Read more</a></p>
                             </div>
                         </div>
         </div>
