--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="blog.css" rel="stylesheet" />
+
+    <!-- font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400"
+      rel="stylesheet"
+    />
+
+    <title>Blog</title>
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header>
+      <nav class="row">
+        <!-- <div class="row"> -->
+        <div class="logo">
+          <img src="1.png" alt="" height="50" />
+        </div>
+
+        <ul class="main-nav">
+          <li class="active"><a href="#Home">Home</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Blog">Blog</a></li>
+          <li><a href="#Contact">Contact</a></li>
+        </ul>
+        <div class="clearfix"></div>
+        <!-- </div> -->
+      </nav>
+    </header>
+
+    <!-- article -->
+    <main class="row">
+      <article>
+        <h1>The Basic Language of the Web: HTML</h1>
+      </article>
+      <aside>
+        <h2>Recent Topic</h2>
+      </aside>
+      <div class="clearfix"></div>
+    </main>
+
+    <!-- footer -->
+    <footer></footer>
+  </body>
 </html>
