--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Stephen Portfolio</title>
     <meta name="keywords" content="Stephen Ijeh portfolio, Front end developer" />
 
+    <link rel="shortcut icon" href="resources/images/stev1.jpg" type="image/x-icon">
+
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
     
 
@@ -135,7 +137,7 @@ Hire me to help you build a web application with a magical user experience. Take
            <li class="portfolio_li">
             <a href="" target="_blank">
                <figure class="portfolio-photo">
-                   <img src="resources/images/pix2.jpg" alt="">
+                   <img src="resources/images/pix4.jpg" alt="">
                 </figure>
                 <div class="portfolio_slideup">
                      <p> View project
@@ -160,7 +162,7 @@ Hire me to help you build a web application with a magical user experience. Take
 
            <li class="portfolio_li">
             <a href="" target="_blank">
-               <figure class="portfolio-photo"><img src="resources/images/pix3.jpg" alt=""></figure>
+               <figure class="portfolio-photo"><img src="resources/images/pixx1.jpg" alt=""></figure>
                <div class="portfolio_slideup">
                 <p> View project
                    <i class="ionicons ion-ios-arrow-forward"></i>
@@ -184,7 +186,7 @@ Hire me to help you build a web application with a magical user experience. Take
 
            <li class="portfolio_li">
             <a href="" target="_blank">
-               <figure class="portfolio-photo"><img src="resources/images/pix5.png" alt=""></figure>
+               <figure class="portfolio-photo"><img src="resources/images/pixx1.jpg" alt=""></figure>
                <div class="portfolio_slideup">
                 <p> View project
                    <i class="ionicons ion-ios-arrow-forward"></i>
@@ -196,7 +198,7 @@ Hire me to help you build a web application with a magical user experience. Take
 
            <li class="portfolio_li">
             <a href="" target="_blank">
-               <figure class="portfolio-photo"><img src="resources/images/pix6.jpg" alt=""></figure>
+               <figure class="portfolio-photo"><img src="resources/images/pix4.jpg" alt=""></figure>
                <div class="portfolio_slideup">
                 <p> View project
                    <i class="ionicons ion-ios-arrow-forward"></i>
@@ -237,7 +239,7 @@ Hire me to help you build a web application with a magical user experience. Take
 
             <div class="col span-1-of-4 box">
                 <img src="resources/images/berlin.jpg" alt="">
-                <h3>Solve 3x3 Rubik's Cube Easy</h3>
+                <h3>Lorem ipsum dolor, sit</h3>
                 <div class="blog-feature date">
                 <i class="ion-ios-calendar small"></i>
                 <span class="psmall">March 13, 2021</span>
@@ -249,10 +251,10 @@ Hire me to help you build a web application with a magical user experience. Take
 
             <div class="col span-1-of-4 box">
                     <img src="resources/images/berlin.jpg" alt="">
-                    <h3>Common JS Mistakes for Beginner</h3>
+                    <h3>Lorem ipsum dolor sit</h3>
                     <div class="blog-feature date">
                     <i class="ion-ios-calendar small"></i>
-                    <span class="psmall">April 29, 2016</span>
+                    <span class="psmall">April 29, 2021</span>
                     </div>
                     <div class="blog-feature">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius ab, perspiciatis maxime nesciunt maiores repudiandae corporis animi enim saepe at aperiam quaerat eveniet, <a href="" >Read more</a></p>
@@ -261,10 +263,10 @@ Hire me to help you build a web application with a magical user experience. Take
 
                 <div class="col span-1-of-4 box">
                         <img src="resources/images/berlin.jpg" alt="">
-                        <h3>Breaking Your Coder's Block</h3>
+                        <h3>Lorem ipsum dolor sit </h3>
                         <div class="blog-feature date">
                         <i class="ion-ios-calendar small"></i>
-                        <span class="psmall">April 29, 2016</span>
+                        <span class="psmall">April 29, 2021</span>
                         </div>
                         <div class="blog-feature">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatum ullam odit fuga incidunt, voluptatem sunt nam sit ipsam cumque delectus, fugiat iure culpa dicta nihil. Maxime minus exercitationem labore. <a href="" >Read more</a></p>
@@ -273,10 +275,10 @@ Hire me to help you build a web application with a magical user experience. Take
 
                     <div class="col span-1-of-4 box">
                             <img src="resources/images/berlin.jpg" alt="">
-                            <h3>Breaking Your Coder's Block</h3>
+                            <h3>Lorem ipsum dolor sit</h3>
                             <div class="blog-feature date">
                             <i class="ion-ios-calendar small"></i>
-                            <span class="psmall">April 29, 2016</span>
+                            <span class="psmall">April 29, 2021</span>
                             </div>
                             <div class="blog-feature">
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid quaerat eaque harum veritatis tenetur officiis earum veniam vero, beatae,i.bus - <a href="" >Read more</a></p>
