--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Hire me to help you build a web application with a magical user experience. Take
            <li class="portfolio_li border_color_one">
             <div class="flex_row">
                <figure class="portfolio-photo">
-                   <img src="resources/images/site1.jpg" alt="">
+                   <img src="resources/images/site.jpg" alt="">
                 </figure>
 
                 <div class="portfolio_contents">
