Added project links

--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@ Hire me to help you build a web application with a magical user experience. Take
                    </p> 
              
                    <button>
-                    <a href="" target="_blank">
+                    <a href="https://www.codelog.tk/" target="_blank">
                         <ion-icon name="open"></ion-icon> 
                        View project</a>
                    </button>
                    <button>
-                       <a href="" target="_blank">
+                       <a href="https://github.com/Stephenice/FCC-Technical-Documentation.github.io" target="_blank">
                            <ion-icon name="logo-github"></ion-icon> View code
                        </a>
                        </button>
