--- a/index.html
+++ b/index.html
@@ -135,11 +135,46 @@ Hire me to help you build a web application with a magical user experience. Take
 
        <div class="row">
        <ul class="portfolio-showcase"> 
+           <!-- 1 project-->
            <li class="portfolio_li border_color_one">
             <div class="flex_row">
                <figure class="portfolio-photo">
-                   <img src="resources/images/site.jpg" alt="">
+                   <img src="resources/images/recipe2.jpg" alt="">
                 </figure>
+
+                <div class="portfolio_contents">
+                    <h2>Recipe Shop</h2>
+                    <div class="code_container">
+
+                        <div class="code"><img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/></div>
+
+                        <div class="code"><img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/sass/sass-original.svg" alt="sass" width="40" height="40"/></div>
+
+                        <div class="code"><img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/></div>
+
+                        <div class="code"><img src="https://raw.githubusercontent.com/devicons/devicon/d00d0969292a6569d45b06d3f350f463a0107b0d/icons/webpack/webpack-original-wordmark.svg" alt="webpack" width="40" height="40"/></div>
+
+                    </div>
+                   <p>Recipe Shop is an interactive recipe app where users can search for over 1 million recipes using the Food2Fork API. Users can search for a specific recipe, update the number of servings, bookmark favorite recipes, and users can create their own recipes. Favorite recipes are stored in local storage so no database was required for this application.</p> 
+                <button>
+                     <a href="https://recipeshop.netlify.app/" target="_blank">
+                         <ion-icon name="open"></ion-icon> 
+                        View project</a>
+                    </button>
+                    <button>
+                        <a href="https://github.com/Stephenice/Recipe_App" target="_blank">
+                            <ion-icon name="logo-github"></ion-icon> View code
+                        </a>
+                        </button>
+                </div>
+                    </div>
+           </li>
+           <!-- 1 project end-->
+
+           <!-- 2 project-->
+           <li class="portfolio_li border_color_one">
+            <div class="flex_row">
+               
 
                 <div class="portfolio_contents">
                     <h2>GoTravel Advisor</h2>
@@ -151,8 +186,6 @@ Hire me to help you build a web application with a magical user experience. Take
                         <div class="code"><ion-icon class="css" name="logo-css3"></ion-icon></div>
                     </div>
                    <p>GoTravel Advisor is a web app helps traveler globally to search for restaurants, hotels, and attractions based on the specialized location using google maps API, rapid APIs, data filtering and much more.</p> 
-
-
                 <button>
                      <a href="https://gotravel-advisor.netlify.app/" target="_blank">
                          <ion-icon name="open"></ion-icon> 
@@ -164,9 +197,20 @@ Hire me to help you build a web application with a magical user experience. Take
                         </a>
                         </button>
                 </div>
+
+
+                <figure class="portfolio-photo">
+                    <img src="resources/images/site.jpg" alt="">
+                 </figure>
                     </div>
            </li>
 
+           <!-- 2 project end-->
+
+           <!-- 3 project-->
+           <!-- 3 project end-->
+
+         
 
 
            <li class="portfolio_li border_color">
@@ -203,7 +247,7 @@ Hire me to help you build a web application with a magical user experience. Take
                 </div>
 
                 <figure class="portfolio-photo">
-                    <img src="resources/images/s5.jpg" alt="">
+                    <img src="resources/images/recipe2.jpg" alt="" >
                  </figure>
 
                     </div>
