--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ Hire me to help you build a web application with a magical user experience. Take
             </div>
 
             <div class="row">
-                <form action="sendemail.php" method="POST" class="contact-form">
+                <form action="./sendemail.php" method="POST" class="contact-form">
                     <div class="row">
                         <div class="col span-1-of-3">
                             <label for="name">Name</label>
