--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@ Hire me to help you build a web application with a magical user experience. Take
             </div>
 
             <div class="row">
-                <form action="#" method="POST" class="contact-form">
+                <form method="POST" action="https://formsubmit.co/69b98fed559dbf89e03ddf3290321bb0" enctype="multipart/form-data" class="contact-form">
+                    <input type="hidden" name="_captcha" value="false">
                     <div class="row">
                         <div class="col span-1-of-3">
                             <label for="name">Name</label>
