--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         <!-- banner contact -->
         <div class="banner-content">
             <h1>I'm Stephen Ijeh</h1>
-            <h6>A Front-End Web Developer who<br> enjoys creating awesome web applications and<br> even magical user experience.</h6>
+            <h6>A Front-End Web Developer who<br> enjoys creating awesome web applications.
+                <!-- and<br> even magical user experience. -->
+            </h6>
             <ul class="icon"> 
                 <!-- <ion-icon name="logo-twitter"></ion-icon> -->
         <li><a href="https://twitter.com/IjehStephen"  target="_blank"><i class="ion-logo-twitter"></i></a></li>
@@ -82,7 +84,7 @@
                 <img class="photo-about" src="resources/images/stev1.jpg" alt="profile picture">
                 I'm a very passionate and motivated individual looking to make a change both personally and for those I work with.  I am a quick thinker and creative problem solver who has not only the knowledge but also the enthusiasm to go the extra mile.<br>
 As a web developer I am focused on user experience satisfaction and reaching the end goal. I have expericence in all aspects of the development process like gathering information, planning, design, development, testing and launching, maintenance and user support.<br>
-Hire me to help you build a web application with a magical user experience. Take a look at <a href="#Portfolio" >work </a> and <a href="#Contact" >get in touch!</a>
+Hire me to help you build a web application with a magical user experience. Take a look at my <a href="#Portfolio" >works </a> and <a href="#Contact" >get in touch!</a>
 
             </p>
         </div>
@@ -398,7 +400,7 @@ Hire me to help you build a web application with a magical user experience. Take
                                             <label for="">&nbsp;</label>
                                         </div>
                                         <div class="col span-2-of-3">
-                <input type="submit" value="Send">
+                <input type="submit" value="Send" >
                                         </div>
                                     </div>
 
