--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         </div>
             <p class="long-copy">
                 <img class="photo-about" src="resources/images/stev1.jpg" alt="profile picture">
-                I'm a very passionate and motivated individual looking to make a change both personally and for those I work with.  I am a quick thinker and creative problem solver who has not only the knowledge but also the enthusiasm to go the extra mile.<br>
+                I'm Stephen, an energetic and motivated front-end web developer with a solid background in computer science and engineering, and an expert in web-based engineering. I am extremely versatile, innovative, and enthusiastic web development specialist.<br>
+                
 As a web developer I am focused on user experience satisfaction and reaching the end goal. I have expericence in all aspects of the development process like gathering information, planning, design, development, testing and launching, maintenance and user support.<br>
 Hire me to help you build a web application with a magical user experience. Take a look at my <a href="#Portfolio" >works </a> and <a href="#Contact" >get in touch!</a>
 
