--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         </div>
             <p class="long-copy">
                 <img class="photo-about" src="resources/images/stev1.jpg" alt="profile picture">
-                I'm Stephen, an energetic and motivated front-end web developer with a solid background in computer science and engineering, and an expert in web-based engineering. I am extremely versatile, innovative, and enthusiastic web development specialist.<br>
-                
-As a web developer I am focused on user experience satisfaction and reaching the end goal. I have expericence in all aspects of the development process like gathering information, planning, design, development, testing and launching, maintenance and user support.<br>
+                I'm Stephen, an energetic and motivated front-end web developer with a solid background in computer science and engineering. I am extremely versatile, innovative, and enthusiastic web development specialist.<br>
+
+As a front-end web developer, I am focused on user experience satisfaction and reaching the end goal. I have expericence in all aspects of the development process like gathering information, planning, design, development, testing and launching, maintenance and user support.<br>
 Hire me to help you build a web application with a magical user experience. Take a look at my <a href="#Portfolio" >works </a> and <a href="#Contact" >get in touch!</a>
 
             </p>
