--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                 <img class="photo-about" src="resources/images/stev1.jpg" alt="profile picture">
                 I'm Stephen, an energetic and motivated front-end web developer with a solid background in computer science and engineering. I am extremely versatile, innovative, and enthusiastic web development specialist.<br>
 
-As a front-end web developer, I am focused on user experience satisfaction and reaching the end goal. I have expericence in all aspects of the development process like gathering information, planning, design, development, testing and launching, maintenance and user support.<br>
+As a front-end developer, I am focused on user experience satisfaction using modern technologies Javascript (ES6+), React, HTML and CSS to build well-engineered, maintainable, testable, and scalable web application. 
+
+I have expericence in all aspects of the development process like gathering information, planning, design, development, testing and launching, maintenance and user support.<br>
 Hire me to help you build a web application with a magical user experience. Take a look at my <a href="#Portfolio" >works </a> and <a href="#Contact" >get in touch!</a>
 
             </p>
