--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 As a front-end developer, I am focused on user experience satisfaction using modern technologies Javascript (ES6+), React, HTML and CSS to build well-engineered, maintainable, testable, and scalable web application. 
 
 I have expericence in all aspects of the development process like gathering information, planning, design, development, testing and launching, maintenance and user support.<br>
-Hire me to help you build a web application with a magical user experience. Take a look at my <a href="#Portfolio" >works </a> and <a href="#Contact" >get in touch!</a>
+Hire me to help you build a web application with a magical user experience. 
+
+<!-- Take a look at my <a href="#Portfolio" >works </a> and <a href="#Contact" >get in touch!</a> -->
 
             </p>
         </div>
