--- a/index.html
+++ b/index.html
@@ -316,7 +316,9 @@ Hire me to help you build a web application with a magical user experience.  -->
                 <span class="psmall">May 30, 2022</span>
                 </div>
                 <div class="blog-feature">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae voluptatum expedita, architecto numquam ipsa corrupti deserunt, quasi magni nihil minima ut asperiores hic. <a href="" >Read more</a></p>
+                <p>The Terminal is one of the most essential tools for developers or anyone learning how to code.
+                    Learning how to use the terminal to interact with your computer for the first time could be
+                    <a href="" >Read more</a></p>
                 </div>
             </div>
 
