--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
 <body>
     <!-- header -->
-    <header id="Home">
-        <nav>
+    <header id="Home" >
+       
+        <nav >
             <div class="row">
                 <div class="logo">
                     <h1 class="logoWhite">&#60;Stephen/&#62;</h1>
@@ -51,6 +52,8 @@
             </div>
 
         </nav>
+         <!-- particles.js container -->
+    <div id="particles-js"></div>
 
         </div>
         <!-- banner contact -->
@@ -448,6 +451,10 @@ Hire me to help you build a web application with a magical user experience.  -->
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/script.js"></script>
 <script src="resources/js/functions.js"></script>
+<script src="resources/js/particles.js"></script>
+<script src="resources/js/app.js"></script>
+
+
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
