Updated components ui

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ Hire me to help you build a web application with a magical user experience.  -->
               </figure>
 
               <div class="portfolio_contents">
-                <h2>Material UI Design</h2>
+                <h2>React Material-UI</h2>
 
                 <div class="code_container">
                   <div class="code">
