--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ Hire me to help you build a web application with a magical user experience.  -->
                 </div>
 
                 <p>
-                  This website is responsive react website built with
+                  A responsive react website built with
                   Material-UI along with lots of Material-UI Components like MUI
                   Layouts (Box, Container, Grid, Stack), typography, App bar,
                   cards, tooltip, font icons, color schemes, dark mode and many
