--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400"
       rel="stylesheet"
     />
+	
+	<!-- Hotjar Tracking Code for Stephen pismap -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3542010,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </head>
 
   <body>
