--- a/index.html
+++ b/index.html
@@ -35,17 +35,7 @@
       rel="stylesheet"
     />
 	
-	<!-- Hotjar Tracking Code for Stephen pismap -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3542010,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+
   </head>
 
   <body>
@@ -81,7 +71,7 @@
       <div class="banner-content">
         <h1>I'm Stephen Ijeh</h1>
         <h6>
-          A Front-End Web Developer who<br />
+          A Software Developer who<br />
           enjoys creating awesome web applications.
           <!-- and<br> even magical user experience. -->
         </h6>
@@ -125,12 +115,12 @@
             src="resources/images/stev1.jpg"
             alt="profile picture"
           />
-          I'm Stephen, an energetic and motivated front-end web developer with a
+          I'm Stephen, an energetic and motivated software developer with a
           solid background in computer science and engineering. I am extremely
           versatile, innovative, and enthusiastic web development specialist.<br />
 
-          As a front-end developer, I am focused on user experience satisfaction
-          using modern technologies Javascript (ES6+), React, HTML and CSS to
+          As a software developer, I am focused on user experience satisfaction
+          using modern technologies Javascript (ES6+), React, LWC, Apex, PHP, HTML and CSS to
           build well-engineered, maintainable, testable, and scalable web
           application. <br />
 
