--- a/index.html
+++ b/index.html
@@ -538,18 +538,18 @@ Hire me to help you build a web application with a magical user experience.  -->
 
       <div class="row">
         <div class="col span-1-of-2 box">
-          <img src="resources/images/unixcmd.jpg" alt="" />
-          <h3>Top Terminal Commands for Productivity</h3>
+          <img src="resources/images/TF.PNG" alt="" />
+          <h3>Truthy & Falsy Values with Confidence!</h3>
           <div class="blog-feature date">
             <i class="ion-ios-calendar small"></i>
-            <span class="psmall">May 30, 2022</span>
+            <span class="psmall">May 30, 2023</span>
           </div>
           <div class="blog-feature">
             <p>
-              The Terminal is one of the most essential tools for developers or
-              anyone learning how to code. Learning how to use the terminal to
-              interact with your computer for the first time could be
-              <a href="">Read more</a>
+              Let's dive into the intriguing world of truthy and falsy values in JavaScript. 
+              We'll explore their fundamental concepts and dissect their impact on logical 
+              operations within the JavaScript language. 
+              <a href="https://stephenice.hashnode.dev/truthy-falsy-values-with-confidence" target="_blank">Read more</a>
             </p>
           </div>
         </div>
