--- a/index.html
+++ b/index.html
@@ -203,7 +203,78 @@ Hire me to help you build a web application with a magical user experience.  -->
       <div class="row">
         <ul class="portfolio-showcase">
           <!-- 1 project-->
-          <li class="portfolio_li border_color_one">
+            <li class="portfolio_li border_color_one">
+              <div class="flex_row">
+                <figure class="portfolio-photo">
+                  <img src="resources/images/ecomm.jpg" alt="" />
+                </figure>
+
+                <div class="portfolio_contents">
+                  <h2>Tech Gadget E-Commerce app</h2>
+                  <div class="code_container">
+                    <div class="code">
+                      <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
+                        alt="javascript"
+                        width="40"
+                        height="40"
+                      />
+                    </div>
+
+                    <div class="code">
+                      <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/sass/sass-original.svg"
+                        alt="sass"
+                        width="40"
+                        height="40"
+                      />
+                    </div>
+
+                    <div class="code">
+                      <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
+                        alt="html5"
+                        width="40"
+                        height="40"
+                      />
+                    </div>
+
+                    <div class="code">
+                      <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/d00d0969292a6569d45b06d3f350f463a0107b0d/icons/webpack/webpack-original-wordmark.svg"
+                        alt="webpack"
+                        width="40"
+                        height="40"
+                      />
+                    </div>
+                  </div>
+                  <p>
+                    E-Commerce App built using Next.js 14, SASS, Stripe, TypeScript, and CMS.
+                    It provides users with a seamless shopping experience, offering a wide range of products categorized for easy navigation. 
+                    The app includes features such as a user-friendly interface for browsing, searching, and filtering items, a secure 
+                    payment gateway for transactions, and many more.
+                  </p>
+                  <button>
+                    <a href="https://e-commerce-pismap.payloadcms.app/" target="_blank">
+                      <ion-icon name="open"></ion-icon>
+                      View project</a
+                    >
+                  </button>
+                  <button>
+                    <a
+                      href="https://github.com/Stephenice/e-commerce"
+                      target="_blank"
+                    >
+                      <ion-icon name="logo-github"></ion-icon> View code
+                    </a>
+                  </button>
+                </div>
+              </div>
+            </li>
+          <!-- 1 project end-->
+
+          <!-- 2 project-->
+          <!-- <li class="portfolio_li border_color_one">
             <div class="flex_row">
               <figure class="portfolio-photo">
                 <img src="resources/images/recipe2.jpg" alt="" />
@@ -272,10 +343,10 @@ Hire me to help you build a web application with a magical user experience.  -->
                 </button>
               </div>
             </div>
-          </li>
-          <!-- 1 project end-->
+          </li> -->
+          <!-- 2 project end-->
 
-          <!-- 2 project-->
+          <!-- 3 project-->
           <li class="portfolio_li border_color_one">
             <div class="flex_row">
               <div class="portfolio_contents">
@@ -334,14 +405,14 @@ Hire me to help you build a web application with a magical user experience.  -->
               </div>
 
               <figure class="portfolio-photo">
-                <img src="resources/images/site.jpg" alt="" />
+                <img src="resources/images/travel2.jpg" alt="" />
               </figure>
             </div>
           </li>
 
-          <!-- 2 project end-->
+          <!-- 3 project end-->
 
-          <!-- 3 project -->
+          <!-- 4 project -->
           <li class="portfolio_li border_color">
             <div class="flex_row">
               <figure class="portfolio-photo">
@@ -423,9 +494,9 @@ Hire me to help you build a web application with a magical user experience.  -->
               </div>
             </div>
           </li>
-          <!-- 3 project end -->
+          <!-- 4 project end -->
 
-          <!-- 4 project-->
+          <!-- 5 project-->
           <li class="portfolio_li border_color">
             <div class="flex_row">
               <div class="portfolio_contents">
@@ -486,7 +557,7 @@ Hire me to help you build a web application with a magical user experience.  -->
               </figure>
             </div>
           </li>
-          <!-- 4 project end-->
+          <!-- 5 project end-->
 
           <!-- <li class="portfolio_li border_color">
             <div class="flex_row">
