--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           versatile, innovative, and enthusiastic web development specialist.<br />
 
           As a software developer, I am focused on user experience satisfaction
-          using modern technologies Javascript (ES6+), React, LWC, Apex, PHP, HTML and CSS to
+          using modern technologies Javascript (ES6+), React, Nest.js, Typescript, LWC, Apex, PHP, HTML and CSS to
           build well-engineered, maintainable, testable, and scalable web
           application. <br />
 
@@ -214,8 +214,8 @@ Hire me to help you build a web application with a magical user experience.  -->
                   <div class="code_container">
                     <div class="code">
                       <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
-                        alt="javascript"
+                        src="https://github.com/marwin1991/profile-technology-icons/assets/136815194/5f8c622c-c217-4649-b0a9-7e0ee24bd704"
+                        alt="Next.js"
                         width="40"
                         height="40"
                       />
@@ -232,8 +232,8 @@ Hire me to help you build a web application with a magical user experience.  -->
 
                     <div class="code">
                       <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
-                        alt="html5"
+                        src="https://user-images.githubusercontent.com/25181517/183890598-19a0ac2d-e88a-4005-a8df-1ee36782fde1.png"
+                        alt="TypeScript"
                         width="40"
                         height="40"
                       />
@@ -252,7 +252,7 @@ Hire me to help you build a web application with a magical user experience.  -->
                     E-Commerce App built using Next.js 14, SASS, Stripe, TypeScript, and CMS.
                     It provides users with a seamless shopping experience, offering a wide range of products categorized for easy navigation. 
                     The app includes features such as a user-friendly interface for browsing, searching, and filtering items, a secure 
-                    payment gateway for transactions, and many more.
+                    payment gateway for transactions, and much more.
                   </p>
                   <button>
                     <a href="https://e-commerce-pismap.payloadcms.app/" target="_blank">
